# debug-dojo

./: .geminiignore  .gitignore  .pre-commit-config.yaml  .pyscn.toml  404.html  GEMINI.md  HISTORY.md  LICENSE  README.md  complexipy.toml  coverage.xml  dojo.toml  index.html  mkdocs.yaml  objects.inv  poe_tasks.toml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  search.html  sitemap.xml  tach.toml  ty.toml
.github/: dependabot.yml
.github/workflows/: docs.yaml  pypi.yaml  python_tests.yaml
DEVELOPMENT_PLAN/: index.html
HISTORY/: index.html
LICENSE/: index.html
REFERENCE/: index.html
STYLE_GUIDE/: index.html
api-reference/: index.html
changelog/: index.html
cli-reference/: index.html
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/repo_polish_20260203/: index.md  metadata.json  spec.md
conductor/archive/textual_migration_20260203/: metadata.json  plan.md  spec.md
conductor/code_styleguides/: python.md
conductor/tracks/automated_publishing_workflow_20260203/: metadata.json  plan.md  spec.md
conductor/tracks/coverage_enforcement_20260203/: metadata.json  plan.md  spec.md
conductor/tracks/custom_debugger_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/custom_inspector_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/direct_ipython_integration_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/documentation_advanced_usage_20260203/: metadata.json  plan.md  spec.md
conductor/tracks/enhanced_ui_with_rich_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/improve_documentation_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/maintenance_dependency_updates_20260203/: metadata.json  plan.md  spec.md
conductor/tracks/mini_profiler_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/operator_helpers_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/plugin_system_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/pudb_breakpoint_management_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/remote_debugging_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/repo_polish_20260203/: plan.md
conductor/tracks/robust_crash_handler_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/specialized_comparers_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/specialized_object_inspectors_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/stability_environment_injection_tests_20260203/: metadata.json  plan.md  spec.md
conductor/tracks/textual_migration_20260203/: index.md  plan.md  spec.md
conductor/tracks/zen_notifications_20260203/: index.md  metadata.json  plan.md  spec.md
configuration/: index.html
development/: index.html
development-plan/: index.html
development_plan/: index.html
docs/: DEVELOPMENT_PLAN.md  STYLE_GUIDE.md  api-reference.md  changelog.md  cli-reference.md  configuration.md  dependency_graph.mmd  development-plan.md  development.md  index.md  style-guide.md
docs/fonts/: README.md
docs/logo/: banner.typ
examples/: dojo.toml  test_target.py
fonts/: index.html
license/: index.html
logo/: banner.typ
scripts/: compile_banner.py
search/: search_index.json
site/: 404.html  dependency_graph.mmd  index.html  objects.inv  search.json  sitemap.xml
site/api-reference/: index.html
site/changelog/: index.html
site/cli-reference/: index.html
site/configuration/: index.html
site/fonts/: index.html
src/debug_dojo/: __init__.py  __main__.py  _cli.py  _compare.py  _config.py  _config_models.py  _execution.py  _gamification.py  _installers.py  _tui.py  all.py  cli.py  install.py  installers.py  version.py
style-guide/: index.html
style_guide/: index.html
tests/: __init__.py  conftest.py  constants.py  test_belt_widget.py  test_compare.py  test_config.py  test_config_widget.py  test_dashboard_ui.py  test_gamification.py  test_gamification_config.py  test_history_widget.py  test_installers.py  test_tui_foundation.py  test_tui_integration.py
tests/assets/: main_exception.py  main_inspect.py  test_config.toml  test_target_breakpoint.py  test_target_exception.py  test_target_inspect.py
tests/cli/: test_cli.py  test_cli_belt.py  test_cli_breakpoint.py  test_cli_config_print.py  test_cli_functionalities.py  test_cli_run_targets.py  test_cli_tui_launch.py
