[project]
    name = "debug-dojo"
    version = "0.1.0"
    description = "Debbugging dojo for Python developers"
    readme = "README.md"
    authors = [
        { name = "bwrob", email = "bartosz.marcin.wroblewski@gmail.com" },
    ]
    requires-python = ">=3.10"
    dependencies = ["pudb>=2016.1", "rich>=11.0.0"]
    license = { text = "MIT" }
    keywords = [
        "debugging",
        "inspection",
        "pudb",
        "rich",
        "tools",
        "traceback",
    ]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Topic :: Software Development :: Debuggers",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[dependency-groups]
    dev = ["basedpyright>=1.31.0", "ruff>=0.12.4"]

[build-system]
    requires      = ["uv_build>=0.7.0,<0.9"]
    build-backend = "uv_build"

[tool.basedpyright]
    typeCheckingMode = "all"
    pythonVersion    = "3.10"
    strict           = ["src/debug_dojo/*"]

[[tool.uv.index]]
    name        = "testpypi"
    url         = "https://test.pypi.org/simple/"
    publish-url = "https://test.pypi.org/legacy/"
    explicit    = true
