[project]
    name = "debug-dojo"
    description = "ðŸ£ Debugging dojo for Python developers"
    authors = [
        { name = "bwrob", email = "bartosz.marcin.wroblewski@gmail.com" },
    ]
    requires-python = ">=3.10,<3.14"
    dependencies = [
        "debugpy>=1.8.0",
        "ipdb>=0.13.0",
        "pudb>=2020.1",
        "pydantic>=2.11.7",
        "rich>=12.0.0",
        "tomlkit>=0.13.3",
        "typer>=0.15.0",
    ]
    license = 'MIT'
    license-files = ['LICENSE']
    keywords = [
        "debugging",
        "inspection",
        "tools",
        "development",
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Debuggers",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    version = "0.4.1"
    readme = "README.md"

    [project.urls]
        Homepage      = "https://bwrob.github.io/debug-dojo/"
        Documentation = "https://bwrob.github.io/debug-dojo/"
        Source        = "https://github.com/bwrob/debug-dojo/"
        Changelog     = "https://bwrob.github.io/debug-dojo/changelog/"

    [project.scripts]
        "dojo" = "debug_dojo._cli:main"

[dependency-groups]
    dev = [
        "basedpyright>=1.31.2",
        "jupyter>=1.1.1",
        "poethepoet>=0.37.0",
        "pytest>=8.4.1",
        "ruff>=0.12.9",
    ]
    docs = [
        "mkdocs>=1.6.1",
        "mkdocs-git-authors-plugin>=0.10.0",
        "mkdocs-git-committers-plugin-2>=2.5.0",
        "mkdocs-git-revision-date-localized-plugin>=1.4.7",
        "mkdocs-material>=9.6.17",
        "mkdocs-typer2>=0.1.5",
        "mkdocstrings-python>=1.17.0",
    ]


[tool.uv]
    required-version = ">=0.8.0"
    package          = true
    default-groups   = "all"

[tool.basedpyright]
    typeCheckingMode = "basic"
    pythonVersion    = "3.10"
    strict           = ["src/debug_dojo/*"]
    ignore           = ["examples"]
